@@ -11,6 +11,7 @@ import com.intellij.testFramework.LightVirtualFile
 import com.jetbrains.python.PyTokenTypes
 import com.jetbrains.python.PythonFoldingBuilder
 import com.jetbrains.snakecharm.lang.psi.SmkFile
+import com.jetbrains.snakecharm.lang.psi.SmkRuleOrCheckpointArgsSection
 import com.jetbrains.snakecharm.lang.psi.elementTypes.SmkElementTypes
 import com.jetbrains.snakecharm.lang.psi.elementTypes.SmkStubElementTypes
 import java.util.*
@@ -24,8 +25,10 @@ class SmkMakeFoldingBuilder : PythonFoldingBuilder() {
         val FOLDED_ELEMENTS = TokenSet.create(
                 SmkStubElementTypes.RULE_DECLARATION_STATEMENT,
                 SmkStubElementTypes.CHECKPOINT_DECLARATION_STATEMENT,
+                SmkElementTypes.WORKFLOW_PY_BLOCK_SECTION_STATEMENT,
+                // Sections
                 SmkElementTypes.RULE_OR_CHECKPOINT_RUN_SECTION_STATEMENT,
-                SmkElementTypes.WORKFLOW_PY_BLOCK_SECTION_STATEMENT
+                SmkElementTypes.RULE_OR_CHECKPOINT_ARGS_SECTION_STATEMENT
         )
     }
 //    override fun isRegionCollapsedByDefault(node: ASTNode): Boolean {
@@ -46,21 +49,46 @@ class SmkMakeFoldingBuilder : PythonFoldingBuilder() {
 
     private fun collectDescriptors(node: ASTNode, descriptors: MutableList<FoldingDescriptor>) {
         val type = node.elementType
-
-        if (type in FOLDED_ELEMENTS) {
-            val endOffset = node.textRange.endOffset
-            val colon = node.findChildByType(PyTokenTypes.COLON)
+        if (type == SmkElementTypes.RULE_OR_CHECKPOINT_ARGS_SECTION_STATEMENT ) {
+            val argumentList = (node.psi as SmkRuleOrCheckpointArgsSection).argumentList
+            val argListNode = argumentList?.node
+            val colon = argListNode?.findChildByType(PyTokenTypes.COLON)
             if (colon != null) {
                 val startElement = colon.psi
+                val endOffset = argListNode.textRange.endOffset
                 val range = TextRange(getVisibleTextOffset(startElement), endOffset)
+
                 if (!range.isEmpty) {
-                    descriptors.add(FoldingDescriptor(
+                    if (argumentList.arguments.size > 2 && argumentList.textContains('\n')) {
+                        descriptors.add(
+                            FoldingDescriptor(
+                                argListNode, range,
+                                FoldingGroup.newGroup("group"),
+                                "...",
+                                isRegionCollapsedByDefault(argListNode),
+                                Collections.emptySet()
+                            )
+                        )
+                    }
+                }
+            }
+        } else if (type in FOLDED_ELEMENTS) {
+            val colon = node.findChildByType(PyTokenTypes.COLON)
+            if (colon != null) {
+                val endOffset = node.textRange.endOffset
+                val startElement = colon.psi
+                val range = TextRange(getVisibleTextOffset(startElement), endOffset)
+
+                if (!range.isEmpty) {
+                    descriptors.add(
+                        FoldingDescriptor(
                             node, range,
                             FoldingGroup.newGroup("group"),
                             "...",
                             isRegionCollapsedByDefault(node),
                             Collections.emptySet()
-                    ))
+                        )
+                    )
                 }
             }
         }
@@ -74,7 +102,7 @@ class SmkMakeFoldingBuilder : PythonFoldingBuilder() {
     }
 
     private fun getVisibleTextOffset(element: PsiElement): Int {
-        return element.textRange.startOffset + element.text.length
+        return element.textRange.startOffset + element.textLength
     }
 
     override fun getLanguagePlaceholderText(node: ASTNode, range: TextRange): String {
