@@ -1,0 +1,18 @@
+rule rule_314_1:<fold text='...'>
+    input:<fold text='...'>
+        key1="value",
+        key2="value",
+        key3="value",
+        key4="value"</fold>
+    output:<fold text='...'>
+        "value1",
+        "value2",
+        "value3",</fold>
+    message:
+        <fold text='"..."'>"aaaa"
+        "aaaa"
+        "aaaa"</fold>
+    params:<fold text='...'>
+        key1="value",
+        key2="value",
+        key3="value"</fold></fold>
